Moves js files to js folder

--- a/gfx/index.html
+++ b/gfx/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<script type="text/javascript" src="vendor/jquery.js"></script>
-<script type="text/javascript" src="vendor/three.min.js"></script>
-<script type="text/javascript" src="vendor/OrbitControl.js"></script>
-<script type="text/javascript" src="zappy.js"></script>
+<script type="text/javascript" src="lib/jquery.js"></script>
+<script type="text/javascript" src="lib/three.min.js"></script>
+<script type="text/javascript" src="lib/OrbitControl.js"></script>
+<script type="text/javascript" src="js/zappy.js"></script>
 <link rel="stylesheet" href="./style.css">
 <body>
 	<div id="dragger" style="-webkit-app-region: drag">
