Added buttons for ressources

--- a/gfx/index.html
+++ b/gfx/index.html
@@ -21,5 +21,16 @@
 		<button type='submit'>Login</button>
 	</form>
 	<canvas id="renderCanvas"></canvas>
+	<div id="infoBar">
+		<ul>
+			<li><a class="t0">a</a>Nourriture</li>
+			<li><a class="t1"></a>Linemate</li>
+			<li><a class="t2"></a>Deraum&egrave;re</li>
+			<li><a class="t3"></a>Sibur</li>
+			<li><a class="t4"></a>Mendiane</li>
+			<li><a class="t5"></a>Phiras</li>
+			<li><a class="t6"></a>Thystame</li>
+		</ul>
+	</div>
 </body>
 </html>
