--- a/gfx/index.html
+++ b/gfx/index.html
@@ -23,7 +23,7 @@
 	<canvas id="renderCanvas"></canvas>
 	<div id="infoBar">
 		<ul>
-			<li><a class="t0">a</a>Nourriture</li>
+			<li><a class="t0"></a>Nourriture</li>
 			<li><a class="t1"></a>Linemate</li>
 			<li><a class="t2"></a>Deraum&egrave;re</li>
 			<li><a class="t3"></a>Sibur</li>
