Added bars animations, better bots positions, and some other stuff

--- a/gfx/index.html
+++ b/gfx/index.html
@@ -30,6 +30,7 @@
 			<li><a class="t4"></a>Mendiane</li>
 			<li><a class="t5"></a>Phiras</li>
 			<li><a class="t6"></a>Thystame</li>
+			<h1 class="view"></h1>
 		</ul>
 	</div>
 </body>
